res/examples/invalid/let_decl_without_assign.eg
let a;

// out: TypeError: unknown type e.g. let a: unknown; or let a;